--- a/developers/.backstage-catalog-info.yml
+++ b/developers/.backstage-catalog-info.yml
@@ -1,9 +1,10 @@
 apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
-  name: developers
+  name: developer-portal
   annotations:
     backstage.io/techdocs-ref: dir:.
 spec:
-  type: team
+  type: portal
+  owner: group:developers
   children: []
